...
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="80">

        <ListView
            android:id="@+id/list_view_feed"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/floating_action_button_listview"
            android:layout_width="wrap_content"
...
